--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,10 @@
     <string name="no_internet_connection">Failed to get stories. Check your internet connection.</string>
 
     <string name="action_settings">Settings</string>
+
+
+    <string name="no_comments_placeholder">No comments (yet)</string>
+    <string name="use_dark_theme_key">use_dark_theme</string>
+    <string name="use_dark_theme_summary">Use the dark theme</string>
+    <string name="use_dark_theme_title">Dark Theme</string>
 </resources>
